fix: overflow

--- a/src/components/Blog/blog.css
+++ b/src/components/Blog/blog.css
@@ -85,14 +85,6 @@
    border-radius: 0;
 }
 
-.large-card:nth-child(1) {
-   margin-bottom: 2rem;
-}
-.large-card:nth-child(2) > .card-image {
-   height: 25rem;
-   margin-top: -2rem;
-}
-
 .large-card:nth-child(2) img {
    border-radius: 1rem 1rem 0 0;
 }
@@ -121,4 +113,11 @@
    font-weight: 550;
    line-height: 3rem;
    color: var(--white);
+}
+
+@media screen and (min-width: 768px) {
+   .large-card:nth-child(2) > .card-image {
+      height: 25rem;
+      margin-top: -2rem;
+   }
 }
