--- a/src/components/Features/features.css
+++ b/src/components/Features/features.css
@@ -40,7 +40,7 @@
    border-radius: 50%;
 }
 
-@media screen and (min-width: 786px) {
+@media screen and (min-width: 768px) {
    .features-container {
       display: flex;
       width: 70%;
