--- a/src/components/HeroContent/heroContent.css
+++ b/src/components/HeroContent/heroContent.css
@@ -48,7 +48,7 @@
    top: -1rem;
 }
 
-@media screen and (min-width: 786px) {
+@media screen and (min-width: 768px) {
    .heroContent-head {
       font-size: 4rem;
    }
