--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -39,7 +39,7 @@
    color: var(--grey);
 }
 
-@media screen and (min-width: 786px) {
+@media screen and (min-width: 768px) {
    .nav-container {
       display: flex;
       justify-content: space-between;
