--- a/src/components/ProductOverview/productOverview.css
+++ b/src/components/ProductOverview/productOverview.css
@@ -1,16 +1,21 @@
+.productOverview-container {
+   margin: auto;
+}
+
 .productOverview-section {
    text-align: left;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   margin-inline: 2rem;
+   width: 90%;
+   margin: auto;
    margin-bottom: 2rem;
 }
 
 .productOverview-section-img {
    height: 25rem;
-   width: 25rem;
+   width: auto;
    object-fit: scale-down;
 }
 
@@ -42,19 +47,18 @@
    color: var(--grey);
 }
 
-@media screen and (min-width: 786px) {
+@media screen and (min-width: 768px) {
    .productOverview-section {
       flex-direction: row;
-      column-gap: 5rem;
    }
 
    .productOverview-section p {
-      width: 22rem;
+      max-width: 22rem;
    }
 
    .productOverview-section-img {
       height: 20rem;
-      width: 30rem;
-      object-fit: cover;
+      width: auto;
+      object-fit: scale-down;
    }
 }
