--- a/src/components/TrustedBy/trustedBy.css
+++ b/src/components/TrustedBy/trustedBy.css
@@ -19,7 +19,7 @@
    object-fit: scale-down;
 }
 
-@media screen and (min-width: 786px) {
+@media screen and (min-width: 768px) {
    .trustedBy-container {
       margin-inline: 12rem;
    }
